option('introspection', type: 'boolean', value: true,
  description: 'Generate GObject Introspection data (GIR)')
option('vapi', type: 'boolean', value: true,
  description: 'Generate Vala VAPI bindings (requires introspection)')
option('tests', type: 'boolean', value: true,
  description: 'Build unit tests')
option('examples', type: 'boolean', value: false,
  description: 'Build example programs')
